# FxxkEula

./: .env.example  .gitignore  README.md  app.py  index.html  package-lock.json  package.json  pyproject.toml
engine/: __init__.py  annotate.py  graph.py  llm.py  prompts.py
src/: App.tsx  index.css
src/components/: AgreementAnalyzer.tsx  CategoryStats.tsx  ClauseCard.tsx  ScoreGauge.tsx  SettingsPanel.tsx
src/lib/: ai-config.ts  ai-service.ts  analyzer.ts  patterns.ts  types.ts
